--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vue-router": "3.4.9",
     "vue-select": "3.11.2",
     "vue-slider-component": "3.2.11",
+    "vue-swal": "^1.0.0",
     "vue-sweetalert2": "4.1.1",
     "vue-toastification": "1.7.11",
     "vue-tour": "1.5.0",
