--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "portal-vue": "2.1.7",
     "postcss-rtl": "1.7.3",
     "prismjs": "1.19.0",
+    "swal": "^0.1.0",
+    "sweetalert": "^2.1.2",
     "swiper": "5.4.5",
     "uuid": "8.3.2",
     "vee-validate": "3.4.5",
